syntax = "proto3";

package core;

option go_package = "tubes.sister/raft/gRPC";


service RaftNode {
    rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
}

message RequestVoteArgs {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteReply {
    int32 term = 1;
    bool voteGranted = 2;
}